2002-12-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_dist): Do not define %GETTEXT% if the user
	is using $seen_gettext_external, this distcheck won't run
	`./configure' with a meaningless `--with-included-gettext'.
	* tests/gettext.test: Make sure distcheck uses --with-included-gettext.
	* tests/gettext2.test: Make sure distcheck does not use
	--with-included-gettext.

	* automake.texi (Public macros) <AM_PROG_CC_STDC>: Explain this
	macro is obsolete, and that users should
	s/am_cv_prog_cc_stdc/ac_cv_prog_cc_stdc/ their configure.ac.

2002-12-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_languages): Test $objdir, not $srcdir, to
	decide whether a _.c file is in a subdirectory and has to be
	cleaned separately.
	Reported by Kevin Ryde.

	* automake.texi (Options): Some English nits from Eric Siegerman.
	(Sources): Rewrite the introduction and move the example to ...
	(Built sources example): ... this separate node.

	* tests/depcomp2.test: Pass CC='gcc' as an argument to ./configure
	not in the environment.  Otherwise the test will fail when
	run with ksh and VERBOSE=x.
	Reported by Paul Jarc.

	* tests/man2.test: Exercize `make uninstall', to test
	the previous change.

2002-12-03  Nicolas Joly  <njoly@pasteur.fr>

	* lib/am/mans.am (uninstall-man%SECTION%): Change the extension of
	the man pages being uninstalled, if needed.

2002-12-03  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (macro_define): Do not strip escaped new lines
	in Automake's +='ed variables.  We don't know whether it will
	be pretty printed or not at this point.
	(variable_pretty_output): Do this here.
	* tests/pluseq10.test: New file.
	* tests/Makefile.am (TESTS): Add pluseq10.test.
	Reported by Ralf Corsepius.

2002-12-02  Charles Wilson  <cwilson@ece.gatech.edu>

	* tests/gnits3.test (AM_INSTALLCHECK_STD_OPTIONS_EXEMPT):
	Append $(EXEEXT) again.

2002-12-02  Alexandre Duret-Lutz  <adl@gnu.org>
