@@ -31,6 +31,9 @@ echo AC_OUTPUT >> configure.in
 cat > Makefile.am << 'END'
 info_TEXINFOS = subdir/main.texi
 subdir_main_TEXINFOS = subdir/inc.texi
+
+installcheck:
+	test -f $(infodir)/main.info
 END
 
 mkdir subdir
