@@ -1,4 +1,5 @@
 Bugs fixed in 1.7.1c:
+* Fix installation and uninstallation of Info files built in subdirectories.
 * Do not run `./configure --with-included-gettext' during `make distcheck'
   if AM_GNU_GETTEXT([external]) is used.
 * Correctly uninstall renamed man pages.
