@@ -1,5 +1,10 @@
 2002-12-05  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* lib/am/texinfos.am (install-info-am, uninstall-info-am): Strip
+	directories from info filenames.
+	* tests/texinfo13.test: Make sure main.info gets installed
+	as $(infodir)/main.info.
+
 	* automake.in (handle_dist): Do not define %GETTEXT% if the user
 	is using $seen_gettext_external, this distcheck won't run
 	`./configure' with a meaningless `--with-included-gettext'.
